# shell_exec

./: .clang-format  .gitignore  README.md  computers.sh  demo.sh  parameter2.sh  read.sh
check_and_restart/: auto_run_script.service  check_ailab.sh  main.cpp  mytest  readme.md  start.sh
daemon_process/: main.cpp
protobuf/: build-proto-lib.sh  do_env.sh
protobuf/protoc_test/: CMakeLists.txt  main.cpp
protobuf/protoc_test/data/: test_data.pb.cc  test_data.pb.h
sh/: if1.sh
zmq_learn/: build.sh
zmq_learn/install/lib/: libzmq.so.5.2.6
zmq_learn/install/lib/cmake/ZeroMQ/: ZeroMQConfigVersion.cmake  ZeroMQTargets-release.cmake
zmq_learn/install/lib/pkgconfig/: libzmq.pc
zmq_learn/libzmq/builds/deprecated-msvc/: resource.rc
zmq_learn/libzmq/builds/deprecated-msvc/properties/: Common.props  DLL.props  Debug.props  DebugDEXE.props  DebugDLL.props  DebugLEXE.props  DebugLIB.props  DebugLTCG.props  DebugSEXE.props  EXE.props  LIB.props  LTCG.props  Link.props  Messages.props  Output.props  Release.props  ReleaseDEXE.props  ReleaseDLL.props  ReleaseLEXE.props  ReleaseLIB.props  ReleaseLTCG.props  ReleaseSEXE.props  Win32.props  x64.props
zmq_learn/libzmq/builds/deprecated-msvc/vs2008/: libzmq.sln
zmq_learn/libzmq/builds/deprecated-msvc/vs2010/: libzmq.sln
zmq_learn/libzmq/builds/deprecated-msvc/vs2010/inproc_lat/: inproc_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2010/inproc_thr/: inproc_thr.props  inproc_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2010/libzmq/: libzmq.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2010/local_lat/: local_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2010/local_thr/: local_thr.props  local_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2010/remote_lat/: remote_lat.props  remote_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2010/remote_thr/: remote_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2012/: libsodium.import.props  libzmq.import.props  libzmq.sln
zmq_learn/libzmq/builds/deprecated-msvc/vs2012/inproc_lat/: inproc_lat.props  inproc_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2012/inproc_thr/: inproc_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2012/libzmq/: libzmq.props  libzmq.vcxproj.filters
zmq_learn/libzmq/builds/deprecated-msvc/vs2012/local_lat/: local_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2012/local_thr/: local_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2012/remote_lat/: remote_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2012/remote_thr/: remote_thr.props  remote_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2013/: libzmq.sln
zmq_learn/libzmq/builds/deprecated-msvc/vs2013/inproc_lat/: inproc_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2013/inproc_thr/: inproc_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2013/local_lat/: local_lat.props  local_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2013/local_thr/: local_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2013/remote_lat/: remote_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2013/remote_thr/: remote_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2015/: libzmq.sln
zmq_learn/libzmq/builds/deprecated-msvc/vs2015/inproc_lat/: inproc_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2015/inproc_thr/: inproc_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2015/local_lat/: local_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2015/local_thr/: local_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2015/remote_lat/: remote_lat.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2015/remote_thr/: remote_thr.vcxproj
zmq_learn/libzmq/builds/deprecated-msvc/vs2015_xp/test_zmq/: test_zmq.vcxproj  (+1 more)
zmq_learn/libzmq/builds/deprecated-msvc/vs2017/: libzmq.sln
zmq_learn/zmq_exec/: CMakeLists.txt
zmq_learn/zmq_exec/cli_srv/: client.cpp  multithread_server.cpp  server.cpp  server_cpp.cpp
zmq_learn/zmq_exec/email_on/: email_pub.cpp  email_sub.cpp
zmq_learn/zmq_exec/keeplong_skt/: durable_pub.cpp  durable_sub.cpp
zmq_learn/zmq_exec/singal_do/: hand_signal.cpp
zmq_learn/zmq_exec/task_calculate/: readme.md  task_collecter.cpp  task_dispatcher.cpp  task_worker.cpp
zmq_learn/zmq_exec/weater_cli_srv/: weather_cli.cpp  weather_srv.cpp
zmq_learn/zmq_exec/zmq_sync/: multithread_sync.cpp  node_sync_pub.cpp  node_sync_sub.cpp  start_pub.sh
zmq_learn/zmq_exec/zmq_version/: version.cpp
(+6 files in other folders)
